# iac-gke-k8s

./: .gitignore  .gitmodules  000_READ_ME_FIRST_SANDBOXED_REACT_AGENT.md  01_enable_services.sh  CURRENT_SANDBOX_PAINPOINTS.md  README.md  REPO_ARCHITECTURE.md  cluster_inspection_output.md  gke_diagnostics.md  inspect_cluster.sh  inspect_gpu_limits.sh  install_nvidia_drivers.sh  install_terraform.sh  main.tf  required_manual_adjustments.md  variables.tf
apps/: README.md
apps/cluster-authz-manager/backend/: Dockerfile  authz-manager.db  pyproject.toml
apps/cluster-authz-manager/backend/app/: auth.py  config.py  main.py
apps/cluster-authz-manager/backend/app/models/: authz.py  base.py
apps/cluster-authz-manager/backend/cluster_authz_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/cluster-authz-manager/backend/tests/: conftest.py  test_api.py  test_authz.py  test_users.py
apps/onboarding-client/: README.md  pyproject.toml
apps/onboarding-client/data/: onboarding_client.db
apps/onboarding-client/src/onboarding_client/: config.py  database.py  deps.py  dex.py  main.py  models.py  schemas.py
apps/onboarding-client/src/onboarding_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/onboarding-client/tests/: test_onboarding_flow.py
apps/sandboxed-react-agent/backend/: Dockerfile  pyproject.toml  requirements.txt
apps/sandboxed-react-agent/backend/app/: agent.py  app_factory.py  asset_manager.py  auth.py  frontend_libs.py  logging_config.py  main.py  public_path.py  sandbox_events.py  sandbox_lifecycle.py  sandbox_manager.py  session_store.py  tracing.py
apps/sandboxed-react-agent/backend/config/: authz-policy.default.yaml
apps/sandboxed-react-agent/backend/sandboxed_react_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/sandboxed-react-agent/backend/tests/: test_agent_terminal_runtime.py  test_agent_toolkit.py  test_api.py  test_authz_service.py  test_postgres_migration.py  test_sandbox_config_mode.py  test_sandbox_lifecycle_workspace.py  test_sandbox_manager_workspace.py  test_sandbox_terminal_service.py  test_workspace_service.py
apps/telegram-service/: .env.example  .gitignore  Dockerfile  README.md  app_down.sh  app_up.sh  build_and_push_image.sh  docker-compose.yml  push_images.sh  pyproject.toml
apps/telegram-service/docs/: api.md  deployment.md  security.md
apps/telegram-service/k8s/: configmap.yaml  deployment.yaml  externalsecret.example.yaml  namespace.yaml  networkpolicy.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
apps/telegram-service/src/telegram_service/: auth.py  config.py  database.py  deps.py  dex.py  main.py  managed_secrets.py  models.py  mtproto.py  onboarding.py  schemas.py  telegram_client.py
apps/telegram-service/test-webapp/: README.md  app.py  requirements.txt  run.sh
docs/: README.md  inventory.md  (+3 more)
(+407 files in other folders)
