[project]
name = "onboarding-client"
version = "0.1.0"
description = "Onboarding gateway for invitations, profile collection, and role assignment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "pydantic-settings>=2.6.1",
  "email-validator>=2.2.0",
  "python-multipart>=0.0.12",
  "pyjwt[crypto]>=2.10.0",
  "resend>=2.5.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
