[project]
name = "sandboxed-react-agent-backend"
version = "0.6.25"
description = "Backend for the sandboxed React agent"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "openai==1.57.4",
    "assistant-stream==0.0.31",
    "k8s-agent-sandbox",
    "langgraph>=1.0.0,<2",
    "langchain-core>=0.3,<1",
    "opentelemetry-api>=1.27.0,<2",
    "opentelemetry-sdk>=1.27.0,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0,<2",
    "opentelemetry-instrumentation-fastapi>=0.48b0,<1",
    "opentelemetry-instrumentation-requests>=0.48b0,<1",
    "PyJWT[crypto]>=2.10.1,<3",
]

[tool.uv]
package = false
